--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1253,6 +1253,10 @@ body {
 .cid-qym9kCjvSb .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-qym9kCjvSb .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qym9kCjvSb .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-qym9kCjvSb .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qym9kCjvSb .collapsed .navbar-collapse.show .navbar-buttons {
   display: flex;
@@ -1355,6 +1359,10 @@ body {
   .cid-qym9kCjvSb .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qym9kCjvSb .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-qym9kCjvSb .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qym9kCjvSb .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-qym9kCjvSb .navbar-collapse.collapsing .navbar-buttons,
   .cid-qym9kCjvSb .navbar-collapse.show .navbar-buttons {
@@ -1664,4 +1672,55 @@ body {
 }
 .cid-qzhSBCKeFK .mbr-iconfont {
   color: #4284df;
+}
+.cid-qzoyQFWZm6 {
+  padding-top: 0px;
+  padding-bottom: 120px;
+  background-color: #ffffff;
+}
+.cid-qzoyQFWZm6 .block-title B {
+  color: #0c57bf;
+}
+.cid-qzoyLExXhV {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qzoyLExXhV .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qzoyLExXhV .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qzoyLExXhV .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qzoyLExXhV .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qzoyLExXhV .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qzoyLExXhV .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
